# screen-grabbing-utility

./: README.md
project/: Cargo.toml
project/icon/: highlighter.cur  paint.cur  pencil.cur
project/src/: data.rs  main.rs  ui.rs
