[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.6.4"
image = "0.24.7"
num-complex = "0.4"
druid = {version = "0.8.3", features = ["im"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
scrap = "0.5.0"
screenshots="0.7.2"

druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
druid-shell = "0.8.3"
