[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
druid = {version = "0.8.3", features = ["im", "image", "png"]}
screenshots="0.8.2"
rusttype="0.9.2"

druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
druid-shell = "0.8.3"
arboard = "3.2.1"
imageproc = "0.23.0"
livesplit-hotkey="0.7.0"
crossbeam="0.8.2"

[profile.dev]
overflow-checks = false
